src/test/deca/context/invalid/LE/ClassSameName.deca
// Description:
//    test les methods dans le main
//
// Resultats:
//    
//
// Historique:
//    cree le 19/01/2022

class A {
    
    int x;
}
class A { 
    int y;
}
